--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/island_1.jpg" width="65%" height="65%"><br>
-			<h3 id="time">Last updated: May 20, 2020</h3>
+			<h3 id="time">Last updated: Dec 30, 2020</h3>
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I currently work as a Software Engineer at Google in Mountain View, California.
+	    			I currently work as a Software Engineer at Google in Bangalore, India.
 
 	    			Before Google, I built Recommendation Systems at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA.
 	    			<br><br> 
@@ -41,7 +41,7 @@
 
 	    			<br><br>
 
-	    			Besides these, I play badminton professionally, run 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
+	    			Besides these, I play badminton semi-professionally, run 5Ks, and go on high altitude treks. I also am an avid competitive programmer; You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
 
 	    			<br><br>
 	    			You can get in touch with me via <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
