--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I currently work as a Software Engineer at Google in Bangalore, India.
-
+	    			I currently am a Software Engineer at Google, working on the Search&Assistant backend infrastructure.
 	    			Before Google, I built Recommendation Systems at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA.
 	    			<br><br> 
 	    			
-	    			I received my Master's in Computer Science from UMass Amherst in May 2018. While there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I received my Master's in Computer Science from UMass Amherst in May 2018. While there, I worked with <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
-	    			Besides these, I play badminton semi-professionally, run 5Ks, and go on high altitude treks. I also am an avid competitive programmer; You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
+	    			Besides these, I played badminton professionally (former), run 5Ks, and go on high altitude treks. I also am an avid competitive programmer; You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
 
 	    			<br><br>
 	    			You can get in touch with me via <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
