--- a/about.html
+++ b/about.html
@@ -95,13 +95,13 @@
         		<p>
 	    			<b class="sub_heading">The Ugly Indian</b>
 	    			<br>
-	    			Actively trying to induce some civic sense into people since 2015 through <a href="http://www.theuglyindian.com/">this</a> organization.
+	    			Actively trying to induce some civic sense into people since 2015 through <a href="https://en.wikipedia.org/wiki/The_Ugly_Indian">this</a> organization.
 
 	    			<br><br>
 
 	    			<b class="sub_heading">Cisco CSR</b>
 	    			<br>
-	    			Giving back to society is one of the most important things. <a href="http://csr.cisco.com/">This</a> group helps achieve that.
+	    			Giving back to society is vital and <a href="http://csr.cisco.com/">this</a> group helps achieve that.
 	    		</p>
     		</div>
 		</div>
